Fix podle phpstanu level 6, založení konfigu

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,6 @@
         "phpstan/phpstan": "^0.12.92"
     },
     "scripts": {
-        "phpstan": "vendor/bin/phpstan analyse src"
+        "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon"
     }
 }
